--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -414,6 +414,9 @@ on property:sys.boot_completed=1
     chown media audio /sys/kernel/wdsp0/boot
     chown media audio /sys/kernel/wcd_cpe0/fw_name
 
+    # Enable ZRAM on boot_complete
+    swapon_all /vendor/etc/fstab.default
+
 on property:persist.vendor.radio.atfwd.start=false
     stop vendor.atfwd
 
